--- a/Rain-Prediction.ipynb
+++ b/Rain-Prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "max        41.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "(96432, 25)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,10 +699,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>maxtempC</th>\n",
+       "      <th>mintempC</th>\n",
+       "      <th>totalSnow_cm</th>\n",
+       "      <th>sunHour</th>\n",
+       "      <th>uvIndex</th>\n",
+       "      <th>uvIndex.1</th>\n",
+       "      <th>moon_illumination</th>\n",
+       "      <th>moonrise</th>\n",
+       "      <th>moonset</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WindChillC</th>\n",
+       "      <th>WindGustKmph</th>\n",
+       "      <th>cloudcover</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precipMM</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>tempC</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>winddirDegree</th>\n",
+       "      <th>windspeedKmph</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01-01-2009 00:00</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>9:58 AM</td>\n",
+       "      <td>10:03 PM</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>109</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01-01-2009 01:00</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>9:58 AM</td>\n",
+       "      <td>10:03 PM</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>85</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01-01-2009 02:00</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>9:58 AM</td>\n",
+       "      <td>10:03 PM</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>61</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01-01-2009 03:00</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>9:58 AM</td>\n",
+       "      <td>10:03 PM</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01-01-2009 04:00</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>9:58 AM</td>\n",
+       "      <td>10:03 PM</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date_time  maxtempC  mintempC  totalSnow_cm  sunHour  uvIndex  \\\n",
+       "0  01-01-2009 00:00        27        12             0     11.6        5   \n",
+       "1  01-01-2009 01:00        27        12             0     11.6        5   \n",
+       "2  01-01-2009 02:00        27        12             0     11.6        5   \n",
+       "3  01-01-2009 03:00        27        12             0     11.6        5   \n",
+       "4  01-01-2009 04:00        27        12             0     11.6        5   \n",
+       "\n",
+       "   uvIndex.1  moon_illumination moonrise   moonset  ... WindChillC  \\\n",
+       "0          1                 31  9:58 AM  10:03 PM  ...         18   \n",
+       "1          1                 31  9:58 AM  10:03 PM  ...         17   \n",
+       "2          1                 31  9:58 AM  10:03 PM  ...         16   \n",
+       "3          1                 31  9:58 AM  10:03 PM  ...         15   \n",
+       "4          1                 31  9:58 AM  10:03 PM  ...         18   \n",
+       "\n",
+       "  WindGustKmph  cloudcover  humidity  precipMM  pressure  tempC  visibility  \\\n",
+       "0           11           2        91       0.0      1014     14          10   \n",
+       "1            9           2        93       0.0      1014     14           7   \n",
+       "2            7           2        94       0.0      1014     13           5   \n",
+       "3            5           2        96       0.0      1014     12           2   \n",
+       "4            5           1        88       0.0      1015     14           5   \n",
+       "\n",
+       "   winddirDegree  windspeedKmph  \n",
+       "0            109              8  \n",
+       "1             85              6  \n",
+       "2             61              4  \n",
+       "3             37              3  \n",
+       "4             45              3  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
   }
  ],
  "metadata": {
